<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/action_sign_in_short"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:scaleType="fitCenter"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaillayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@color/transparent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/buttonLogin"
        style="@style/Homescreen_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintTop_toBottomOf="@+id/passwordlayout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:height="50dp"
        android:text="@string/register_title"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:strokeColor="@color/purple_500" />


</androidx.constraintlayout.widget.ConstraintLayout>