<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashScreenFragment">



    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.swtug.anticovid.view.splashScreen.SplashScreenFragment"
        android:label="SplashScreen">
        <action
            android:id="@+id/action_splashFragment_to_termsOfUse"
            app:destination="@id/termsOfUseFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_splashFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/termsOfUseFragment"
        android:name="com.swtug.anticovid.view.termsOfUse.TermsOfUseFragment"
        android:label="TermsOfUseFragment" >

        <action
            android:id="@+id/action_termsOfUseFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/termsOfUseFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_termsOfUseFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/termsOfUseFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.swtug.anticovid.view.login.LoginFragment"
        android:label="LoginFragment">

        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            />

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>



    <fragment
        android:id="@+id/registerFragment"
        android:name="com.swtug.anticovid.view.register.RegisterFragment"
        android:label="RegisterFragment" >

        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"
            />

        <action
            android:id="@+id/action_registerFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"
            />
    </fragment>


    <fragment
        android:id="@+id/mainFragment"
        android:name="com.swtug.anticovid.view.main.MainFragment"
        android:label="MainFragment">
        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mainFragment_to_addTestReportFragment"
            app:destination="@id/addTestReportFragment" />
        <action
            android:id="@+id/action_mainFragment_to_changePassword"
            app:destination="@id/changePassword" />

        <action
            android:id="@+id/action_mainFragment_to_informationAndRulesFragment"
            app:destination="@+id/informationAndRules"
            />
    </fragment>
    <fragment
        android:id="@+id/informationAndRules"
        android:name="com.swtug.anticovid.view.informationAndRules.InformationAndRules"
        android:label="@string/informationAndRules">

    </fragment>

    <fragment
        android:id="@+id/addTestReportFragment"
        android:name="com.swtug.anticovid.view.addTestReport.AddTestReportFragment"
        android:label="AddTestReportFragment" />
    <fragment
        android:id="@+id/changePassword"
        android:name="com.swtug.anticovid.view.changePassword.ChangePassword"
        android:label="ChangePassword" />

</navigation>