...
    <string name="password">Password</string>
    <string name="error_empty_fields">At least one field is empty!</string>
    <string name="error_pwd_too_short">Password length has to be at least 8 characters long!</string>
    <string name="error_user_exists">A user with the same E-mail already exists!</string>
    <string name="error_firebase_communication">An error occurred communicating with Firebase!</string>
    <string name="action_cancel_register">Cancel</string>
    <string name="error_no_credentials">No E-Mail or password entered!</string>

    <string name="error_wrong_password">The combination of user and password does not exist!</string>
    <string name="error_secID_lenth">The Social security ID has to be 10 characters long!</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="test_date">Test Date:</string>
    <string name="valid_date">Valid Until:</string>
    <string name="active">Active cases</string>
...
