...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@null"
            android:hint="@string/manufacturer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:enabled="false"/>

...
